--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,14 @@ repositories {
 dependencies {
 	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	//runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+	implementation 'org.hibernate:hibernate-core:5.4.9.Final'
+	implementation 'org.springframework:spring-orm:5.2.2.RELEASE'
+	implementation 'org.apache.tomcat:tomcat-dbcp:9.0.29'
+	implementation 'com.sun.xml.bind:jaxb-impl:2.3.2'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	compile 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
