--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation 'com.sun.xml.bind:jaxb-impl:2.3.2'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	compile 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
-
+	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
