--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -15,7 +15,7 @@ repositories {
 dependencies {
 	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.hibernate:hibernate-core:5.4.9.Final'
 	implementation 'org.springframework:spring-orm:5.2.2.RELEASE'
 	implementation 'org.apache.tomcat:tomcat-dbcp:9.0.29'
