--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 test {
