--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/node": "^15.12.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
